--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.2",
     "styled-components": "^5.3.8"
   },
   "devDependencies": {
